# redeploy

./: .gitignore  .redeployignore  CHANGELOG.md  DOQL-INTEGRATION.md  Makefile  README.md  REFACTORING.md  REPAIR_LOG.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  migration-local.yaml  migration.yaml  project.sh  pyproject.toml  pyqual.yaml  redeploy-version-management-plan.md  redeploy.yaml  sumd.json
.pyqual/: pipeline.db
.redeploy/: preflight-schema.yaml  version.yaml
TODO/: Pomysł jest ciekawy i wbrew pozorom całkiem sensow.md  a jak by to miałol być obslugiwane przez rozne jez.md  zaproponuj runtime do obslugi tego typu pliku.md
code2llm_output/: README.md  analysis.toon.yaml  context.md
docs/: README.md  dsl-migration.md  fleet.md  markpact-audit.md  markpact-implementation-plan.md  observe.md  op3-migration.md  patterns.md
examples/: 13-kiosk-appliance.yaml  14-blue-green.yaml  16-auto-rollback.yaml  README.md  calibration-lab-compliance.yaml  docker-to-podman-quadlet.yaml  docker-version-bump.yaml  iot-fleet-ota.yaml  k3s-to-docker.yaml  kiosk-appliance.yaml  saas-docker-to-quadlet.yaml  target-docker-full.yaml  target-from-k3s-to-docker.yaml
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt  validation.toon.yaml
redeploy/: __init__.py  audit.py  checkpoint.py  cli.py  data_sync.py  discovery.py  fleet.py  heal.py  mcp_server.py  models.py  observe.py  (+8 more)
(+390 files in other folders)
