[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redeploy"
version = "0.1.0"
description = "Infrastructure migration toolkit: detect → plan → apply"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "loguru>=0.7",
    "paramiko>=3.0",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.scripts]
redeploy = "redeploy.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["redeploy*"]
